<resources>
	<string name="app_name">Paint++</string>
	<string name="activity_main">Paint++</string>
	<string name="activity_color_select">Select color</string>
	<string name="activity_file_open">Open file</string>
	<string name="activity_file_save">Save file</string>
	<string name="activity_settings">Settings</string>
	<string name="action_drawer_open">Open tool pane</string>
	<string name="action_drawer_close">Close tool pane</string>
	<string name="properties">Properties: %s</string>
	<string name="dialog_new_image">New image</string>
	<string name="dialog_resize_image">Resize image</string>
	<string name="dialog_scale_image">Scale image</string>
	<string name="dialog_flip_image">Flip image</string>
	<string name="dialog_rotate_image">Rotate image</string>
	<string name="dialog_new_layer">New layer</string>
	<string name="dialog_resize_layer">Resize layer</string>
	<string name="dialog_scale_layer">Scale layer</string>
	<string name="dialog_flip_layer">Flip layer</string>
	<string name="dialog_rotate_layer">Rotate layer</string>
	<string name="dialog_replace_file">Replace file?</string>
	<string name="dialog_wait">Please wait</string>
	<string name="dialog_fill_message">Filling…</string>
	<string name="dialog_layer_name">New layer name</string>
	<string name="dialog_layer_delete">Delete layer \"%s\"?</string>
	<string name="dialog_layer_properties">Layer properties</string>
	<string name="dialog_color_curves_rgb">RGB color curves</string>
	<string name="dialog_color_curves_hsv">HSV color curves</string>
	<string name="dialog_colors_brightness">Brightness settings</string>
	<string name="dialog_save_message">Saving…</string>
	<string name="dialog_set_zoom">Set zoom</string>
	<string name="dialog_gradient">Gradient</string>
	<string name="preference_jpg_quality">JPG save quality</string>
	<string name="preference_jpg_quality_dialog">JPG save quality</string>
	<string name="preference_view_smooth">Smooth view</string>
	<string name="preference_view_smooth_summary">Smoothing zoomed images</string>
	<string name="preference_color_mode">Color selection mode</string>
	<string name="preference_color_mode_dialog">Color selection mode</string>
	<string name="action_layers">Layers</string>
	<string name="action_tool">Tool</string>
	<string name="action_file">File</string>
	<string name="action_new_image">New image</string>
	<string name="action_capture_photo">Capture photo</string>
	<string name="action_open_image">Open image</string>
	<string name="action_save_image">Save image</string>
	<string name="action_save_image_as">Save image as</string>
	<string name="action_edit">Edit</string>
	<string name="action_cut">Cut</string>
	<string name="action_copy">Copy</string>
	<string name="action_paste">Paste</string>
	<string name="action_view">View</string>
	<string name="action_set_zoom">Set zoom</string>
	<string name="action_zoom_default">Default zoom</string>
	<string name="action_image_center">Image center</string>
	<string name="action_grid">Grid</string>
	<string name="action_snap_to_grid">Snap to grid</string>
	<string name="action_image">Image</string>
	<string name="action_resize_image">Resize image</string>
	<string name="action_scale_image">Scale image</string>
	<string name="action_flip_image">Flip image</string>
	<string name="action_rotate_image">Rotate image</string>
	<string name="action_layer">Layer</string>
	<string name="action_new_layer">New layer</string>
	<string name="action_open_layer">Open layer</string>
	<string name="action_save_layer">Save layer</string>
	<string name="action_resize_layer">Resize layer</string>
	<string name="action_scale_layer">Scale layer</string>
	<string name="action_flip_layer">Flip layer</string>
	<string name="action_rotate_layer">Rotate layer</string>
	<string name="action_selection">Selection</string>
	<string name="action_select_all">Select all</string>
	<string name="action_select_nothing">Remove selection</string>
	<string name="action_revert_selection">Invert selection</string>
	<string name="action_colors">Colors</string>
	<string name="action_colors_invert">Invert colors</string>
	<string name="action_colors_brightness">Brightness</string>
	<string name="action_color_curves_rgb">RGB color curves</string>
	<string name="action_color_curves_hsv">HSV color curves</string>
	<string name="action_settings">Settings</string>
	<string name="tool_pan">Pan</string>
	<string name="tool_marker">Marker</string>
	<string name="tool_brush">Brush</string>
	<string name="tool_fill">Fill</string>
	<string name="tool_shape">Shapes</string>
	<string name="tool_selection">Selection</string>
	<string name="tool_color_pick">Color picker</string>
	<string name="tool_drag">Layer drag</string>
	<string name="tool_rubber">Rubber</string>
	<string name="shape_line">Line</string>
	<string name="shape_circle">Circle</string>
	<string name="shape_polygon">Polygon</string>
	<string name="line_cap_round">Round</string>
	<string name="line_cap_square">Square</string>
	<string name="line_cap_butt">Stub</string>
	<string name="selection_mode_new">Replace</string>
	<string name="selection_mode_add">Add</string>
	<string name="selection_mode_subtract">Subtract</string>
	<string name="selection_mode_multiply">Intersect</string>
	<string name="selection_shape_rectangle">Rectangle</string>
	<string name="selection_shape_oval">Oval</string>
	<string name="layer_properties">Properties</string>
	<string name="layer_change_name">Change name</string>
	<string name="layer_duplicate">Duplicate</string>
	<string name="layer_join">Join to below</string>
	<string name="layer_delete">Delete</string>
	<string name="layer_mode_standard">Standard</string>
	<string name="layer_mode_add">Add</string>
	<string name="layer_mode_multiply">Multiply</string>
	<string name="choice_of_tool">Tool choice</string>
	<string name="tool_size">Size</string>
	<string name="image_x">X</string>
	<string name="image_y">Y</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="keep_ratio">Keep dimensions ratio</string>
	<string name="image_width">Width</string>
	<string name="image_height">Height</string>
	<string name="brush_shape_offset">Offset</string>
	<string name="message_too_big">Given dimensions are too big</string>
	<string name="scaling_smooth">Smooth</string>
	<string name="direction">Direction</string>
	<string name="direction_horizontal">Horizontally</string>
	<string name="direction_vertical">Vertically</string>
	<string name="zoom">Zoom</string>
	<string name="center_view">Center</string>
	<string name="unknown">Unknown</string>
	<string name="file_back">Back</string>
	<string name="save">Save</string>
	<string name="save_file_name">File name</string>
	<string name="unsupported_file_format">Unsupported file format</string>
	<string name="replace_file_text">File already exists. Replace?</string>
	<string name="replace">Replace</string>
	<string name="fill_threshold">Threshold</string>
	<string name="marker_smooth_edge">Smooth edge</string>
	<string name="fill_warning">Filling big regions may take a while.</string>
	<string name="shape">Shape</string>
	<string name="line_width">Width</string>
	<string name="line_cap">Line cap</string>
	<string name="apply">Apply</string>
	<string name="circle_fill">Fill</string>
	<string name="circle_width">Stroke width</string>
	<string name="shapes_smooth">Smooth</string>
	<string name="polygon_sides">Sides</string>
	<string name="polygon_fill">Fill</string>
	<string name="polygon_width">Stroke width</string>
	<string name="selection_mode">Selection mode</string>
	<string name="error_polygon_too_few_sides">Too few sides</string>
	<string name="error_polygon_too_many_sides">Too many sides</string>
	<string name="pick_average">Pick average of colors</string>
	<string name="pick_average_size">Pick radius</string>
	<string name="translucency">Translucency</string>
	<string name="layers">Layers</string>
	<string name="layer_name">Name</string>
	<string name="message_invalid_bounds">Given dimensions are invalid</string>
	<string name="new_layer_name">New layer</string>
	<string name="opened_layer_name">Layer from file</string>
	<string name="message_flip_direction">Choose flip direction</string>
	<string name="rubber_strength">Strength</string>
	<string name="rubber_smooth">Smooth</string>
	<string name="message_cannot_open_file">Can\'t open file</string>
	<string name="pasted_layer">Pasted layer</string>
	<string name="duplicate">\u0020Duplicate</string>
	<string name="too_many_layers">Too many layers!</string>
	<string name="layer_mode">Mixing mode</string>
	<string name="layer_opacity">Opacity</string>
	<string name="curves_channel_in">Input channel</string>
	<string name="curves_channel_out">Output channel</string>
	<string name="preview">Preview</string>
	<string name="channel__red">Red</string>
	<string name="channel__green">Green</string>
	<string name="channel__blue">Blue</string>
	<string name="channel__hue">Hue</string>
	<string name="channel__saturation">Saturation</string>
	<string name="channel__value">Value</string>
	<string name="restore">Restore</string>
	<string name="brightness">Brightness</string>
	<string name="contrast">Contrast</string>
	<string name="selection_shape">Shape</string>
	<string name="message_cannot_save_file">Can\'t save file</string>
	<string name="open">Open</string>
	<string name="dialog_image_too_big">Image is too big</string>
	<string name="dialog_image_too_big_question">Do you want to scale it down to %1$dx%2$d?</string>
	<string name="scale_down">Scale down</string>
	<string name="tool_gradient">Gradient</string>
	<string name="gradient">Gradient</string>
	<string name="gradient_shape">Gradient shape</string>
	<string name="gradient_shape_linear">Linear</string>
	<string name="gradient_shape_bilinear">Bilinear</string>
	<string name="gradient_shape_radial">Radial</string>
	<string name="gradient_shape_sweep">Sweep</string>
	<string name="gradient_shape_sweep_symmetric">Sweep symmetric</string>
	<string name="gradient_repeatability">Repeatability</string>
	<string name="gradient_repeatability_no_repeat">No repeat</string>
	<string name="gradient_repeatability_repeat">Repeat</string>
	<string name="gradient_repeatability_mirror">Mirror</string>
	<string name="gradient_revert">Revert</string>
	<string name="temp_100" translatable="false">100%</string>
	<string name="temp_50_" translatable="false">50</string>
	<string name="temp_100_" translatable="false">100</string>
	<string name="desc_colors_swap">Swap colors</string>
	<string name="desc_add_gradient_point">Add gradient point</string>
	<string name="desc_delete_gradient_point">Delete gradient point</string>
	<string name="desc_scale_down">Scale down</string>
	<string name="desc_scale_up">Scale up</string>
	<string name="desc_file_type">File type</string>
	<string name="desc_file_type_file">Other file</string>
	<string name="desc_file_type_directory">Directory</string>
	<string name="desc_layer_handle">Layer handle</string>
	<string name="desc_layer_visibility">Layer visibility</string>
	<string name="desc_layer_visible">Hide layer</string>
	<string name="desc_layer_invisible">Show layer</string>
	<string name="desc_layer_menu">Layer menu</string>
	<string name="desc_polygon_less_sides">Less sides</string>
	<string name="desc_polygon_more_sides">More sides</string>
	<string name="desc_layer_add">Add layer</string>
	<string name="desc_file_type_image">Image</string>
	<string name="dialog_load_wait_message">Loading…</string>
	<string name="angle_90" translatable="false">90°</string>
	<string name="angle_180" translatable="false">180°</string>
	<string name="angle_270" translatable="false">270°</string>
	<string name="star_corners">Corners</string>
	<string name="desc_star_less_corners">Less corners</string>
	<string name="desc_star_more_corners">More corners</string>
	<string name="star_fill">Fill</string>
	<string name="star_width">Stroke width</string>
	<string name="star_join">Join</string>
</resources>