<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<pl.karol202.paintplus.settings.SeekBarPreference
		android:key="preference_jpg_quality"
		android:title="@string/preference_jpg_quality"
		android:dialogTitle="@string/preference_jpg_quality_dialog"
		android:defaultValue="95"/>
	<CheckBoxPreference
		android:key="preference_view_smooth"
		android:title="@string/preference_view_smooth"
		android:summary="@string/preference_view_smooth_summary"
		android:defaultValue="true"/>
	<ListPreference
		android:key="preference_color_mode"
		android:title="@string/preference_color_mode"
		android:summary="%s"
		android:dialogTitle="@string/preference_color_mode_dialog"
		android:entries="@array/color_modes"
		android:entryValues="@array/color_modes"
		android:defaultValue="@string/color_mode_default"/>
</PreferenceScreen>