<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 karol-202
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	
	<item android:id="@+id/action_layer_properties"
		android:title="@string/layer_properties" />
	<item android:id="@+id/action_layer_change_name"
		android:title="@string/layer_change_name" />
	<item android:id="@+id/action_layer_duplicate"
		android:title="@string/layer_duplicate" />
	<item android:id="@+id/action_join"
		android:title="@string/layer_join" />
	<item android:id="@+id/action_layer_delete"
		android:title="@string/layer_delete" />
</menu>