<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 karol-202
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/shape_properties">

	<TextView
		android:id="@+id/text_star_corners"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/star_corners"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageButton
		android:id="@+id/button_minus_star_corners"
		app:srcCompat="@drawable/ic_minus_black_48dp"
		android:background="?android:attr/selectableItemBackground"
		android:layout_marginStart="12dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_star_corners"
		android:scaleType="fitXY"
		android:layout_marginTop="12dp"
		android:layout_width="32dp"
		android:layout_height="32dp"
		android:contentDescription="@string/desc_star_less_corners" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/edit_layout_star_corners"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toRightOf="@+id/button_minus_star_corners"
		app:layout_constraintTop_toBottomOf="@+id/text_star_corners"
		app:layout_constraintRight_toLeftOf="@+id/button_plus_star_corners"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="4dp">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:textAlignment="center"
			android:gravity="center_horizontal"/>
	</com.google.android.material.textfield.TextInputLayout>

	<ImageButton
		android:id="@+id/button_plus_star_corners"
		app:srcCompat="@drawable/ic_plus_black_48dp"
		android:background="?android:attr/selectableItemBackground"
		app:layout_constraintTop_toBottomOf="@+id/text_star_corners"
		android:scaleType="fitXY"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="8dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_width="32dp"
		android:layout_height="32dp"
		android:contentDescription="@string/desc_star_more_corners" />

	<CheckBox
		android:id="@+id/check_star_fill"
		android:text="@string/star_fill"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@+id/edit_layout_star_corners"
		android:layout_marginTop="8dp"
		android:layout_marginStart="12dp"
		app:layout_constraintLeft_toLeftOf="parent" />

	<TextView
		android:id="@+id/text_star_width"
		android:text="@string/star_width"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@+id/check_star_fill"
		android:layout_marginTop="8dp"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent" />

	<SeekBar
		android:id="@+id/seek_star_width"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toRightOf="@+id/text_star_width"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/check_star_fill"
		android:layout_marginEnd="32dp"
		app:layout_constraintRight_toRightOf="parent"
		android:max="49" />

	<TextView
		android:id="@+id/star_width"
		android:text="@string/temp_50_"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@+id/check_star_fill"
		android:layout_marginTop="8dp"
		app:layout_constraintLeft_toRightOf="@+id/seek_star_width" />

	<TextView
		android:id="@+id/text_star_join"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="12dp"
		android:text="@string/star_join"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/seek_star_width" />

	<Spinner
		android:id="@+id/spinner_star_join"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_star_join"
		app:layout_constraintVertical_bias="1.0"
		app:layout_constraintHorizontal_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
