<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_width"
		android:id="@+id/text_width"
		android:layout_alignParentStart="true"
		android:layout_alignBaseline="@+id/edit_image_width"
		android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_height"
		android:id="@+id/text_height"
		android:layout_alignParentStart="true"
		android:layout_alignBaseline="@+id/edit_image_height"
		android:layout_marginRight="24dp"
		android:layout_marginLeft="24dp" />

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="number"
		android:ems="10"
		android:id="@+id/edit_image_width"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_toEndOf="@id/text_width"
		android:maxLength="9" />

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="number"
		android:ems="10"
		android:id="@+id/edit_image_height"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/edit_image_width"
		android:layout_toEndOf="@id/text_height"
		android:maxLength="9" />

	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/keep_ratio"
		android:id="@+id/check_keep_ratio"
		android:layout_below="@+id/edit_image_height"
		android:layout_alignParentStart="true"
		android:layout_marginLeft="12dp" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_x"
		android:id="@+id/text_x"
		android:layout_alignParentStart="true"
		android:layout_marginLeft="24dp"
		android:layout_marginRight="24dp"
		android:layout_alignBaseline="@+id/edit_image_x" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_y"
		android:id="@+id/text_y"
		android:layout_alignParentStart="true"
		android:layout_marginRight="24dp"
		android:layout_marginLeft="24dp"
		android:layout_alignBaseline="@+id/edit_image_y" />

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="number|numberSigned"
		android:ems="10"
		android:id="@+id/edit_image_x"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/check_keep_ratio"
		android:layout_toEndOf="@id/text_x"
		android:maxLength="9" />

	<EditText
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:inputType="number|numberSigned"
		android:ems="10"
		android:id="@+id/edit_image_y"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/edit_image_x"
		android:layout_toEndOf="@id/text_y"
		android:maxLength="9" />

	<ImageView
		android:layout_width="192dp"
		android:layout_height="192dp"
		android:id="@+id/image_resize_preview"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/edit_image_y" />

</RelativeLayout>