<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_width"
		android:id="@+id/text_width"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBaseline_toBaselineOf="@+id/edit_object_width" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_height"
		android:id="@+id/text_height"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBaseline_toBaselineOf="@+id/edit_object_height" />
	
	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="number"
		android:ems="10"
		android:id="@+id/edit_object_width"
		android:maxLength="9"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toRightOf="@+id/text_width"
		app:layout_constraintTop_toTopOf="parent" />
	
	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="number"
		android:ems="10"
		android:id="@+id/edit_object_height"
		android:maxLength="9"
		app:layout_constraintTop_toBottomOf="@+id/edit_object_width"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toRightOf="@+id/text_height" />
	
	<CheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/keep_ratio"
		android:id="@+id/check_keep_ratio"
		app:layout_constraintTop_toBottomOf="@+id/edit_object_height"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_x"
		android:id="@+id/text_x"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBaseline_toBaselineOf="@+id/edit_object_x" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/image_y"
		android:id="@+id/text_y"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBaseline_toBaselineOf="@+id/edit_object_y" />
	
	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="number|numberSigned"
		android:ems="10"
		android:id="@+id/edit_object_x"
		android:maxLength="9"
		app:layout_constraintTop_toBottomOf="@+id/check_keep_ratio"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toRightOf="@+id/text_x" />
	
	<EditText
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:inputType="number|numberSigned"
		android:ems="10"
		android:id="@+id/edit_object_y"
		android:maxLength="9"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/edit_object_x"
		android:layout_marginStart="24dp"
		app:layout_constraintLeft_toRightOf="@+id/text_y" />
	
	<ImageView
		android:layout_width="192dp"
		android:layout_height="192dp"
		android:id="@+id/image_resize_preview"
		app:layout_constraintTop_toBottomOf="@+id/edit_object_y"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>