<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 karol-202
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RadioGroup
		android:id="@+id/radioGroup_angle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="24dp"
		android:layout_marginTop="8dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RadioButton
			android:id="@+id/radio_angle_90"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/angle_90"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<RadioButton
			android:id="@+id/radio_angle_180"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/angle_180"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

		<RadioButton
			android:id="@+id/radio_angle_270"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/angle_270"
			android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
