<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent" android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/text_gradient"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/gradient"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="16dp" />
	
	<pl.karol202.paintplus.tool.gradient.GradientPreviewView
		android:id="@+id/gradient_preview"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginEnd="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/border"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_gradient" />
	
	<CheckBox
		android:id="@+id/check_gradient_revert"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/gradient_revert"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/gradient_preview" />
	
	<TextView
		android:id="@+id/text_gradient_shape"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:text="@string/gradient_shape"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/check_gradient_revert" />
	
	<Spinner
		android:id="@+id/spinner_gradient_shape"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="4dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_gradient_shape"
		android:layout_marginStart="4dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintHorizontal_bias="0.0" />
	
	<TextView
		android:id="@+id/text_gradient_repeatability"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:text="@string/gradient_repeatability"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/spinner_gradient_shape"
		android:layout_marginStart="16dp" />
	
	<Spinner
		android:id="@+id/spinner_gradient_repeatability"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="4dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_gradient_repeatability"
		app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>